# divvy

./: .gitignore  divvy_use_history.txt  plan.org  pyproject.toml  setup.py
divvy/: __init__.py  assignmentdirectory.py  bblearn.py  bblearn_submission_utils.py  bblearnassignmentdownloadzip.py  bblearnsubmittedfile.py  cli.py  errors.py  file.py  filelocation.py  rubric.py  unpack_submission.py
divvy/assignment/: __init__.py  assignment.py  cli.py
divvy/attempts/: __init__.py
divvy/bblearn/: errors.py  filename.py  submissionfile.py
divvy/bblearn/filename/: __init__.py
divvy/errors/: __init__.py
divvy/grading/: __init__.py  assign.py  cli.py  gradingmap.py  package.py  send.py  util.py
divvy/rubrics/: __init__.py  collate.py  evaluate.py  rubricfile.py  rubricgroup.py  rubricgroups.py  synthesize.py
divvy/test/: test_BBLearnFilename.py  test_bblearn_submissionfile.py
tests/: conftest.py  test_bblearn_submissionfile.py  test_bblearn_submissionfilefactory.py  test_submissionfile.py
tests/attempts/: doubles.py  test_attempt.py  test_attemptfile.py
tests/bblearn/: test_filename.py
