[tool.poetry]
name = "divvy"
version = "0.2.0"
description = "Interactivity with BBLearn assignment submissions"
authors = ["C. Nakai McAddis <nakai.mcaddis@nau.edu>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
pdbpp = "^0.10.2"
pytest-timeout = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
divvy = 'divvy.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
